Add: HomePage styles and components updated

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -5,6 +5,15 @@ $app-background: hsl(207, 26%, 17%);
 $text-color: hsl(0, 0%, 100%);
 $shadow-color: hsl(200, 15%, 8%);
 
+@mixin element {
+    background-color: $element-background;
+    box-shadow: 0px 0px 5px 5px rgba($shadow-color, 0.15);
+    border-radius: 5px;
+    border: none;
+    color: $text-color;
+    cursor: pointer;
+}
+
 * {
     margin: 0; padding: 0;
     font-family: 'Nunito Sans', sans-serif;
@@ -21,10 +30,21 @@ $shadow-color: hsl(200, 15%, 8%);
     $element-background: hsl(0, 0%, 52%);
     $app-background: hsl(0, 0%, 98%);
     $text-color: hsl(200, 15%, 8%);
+    $shadow-color: hsl(200, 15%, 8%);
 }
 
 body {
     min-height: 100vh;
     background-color: $app-background;
     color: $text-color;
+}
+
+button {
+    @include element();
+    padding: 5px 15px;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    font-weight: 600;
+    font-size: 15px;
 }
