--- a/src/components/CountryCard.scss
+++ b/src/components/CountryCard.scss
@@ -1,11 +1,15 @@
 @import "../styles/global";
 
 .country-card {
-    background-color: $element-background;
-    width: 250px;
-    border-radius: 5px;
-    margin: 10px;
-    box-shadow: 0px 0px 5px 5px rgba($shadow-color, 0.15);
+    
+    @include element();
+    max-width: 100%;
+    transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+    &:hover {
+        filter: brightness(1.1);
+        transform: scale(1.03);
+    }
     
     img {
         width: 100%;
