--- a/src/components/AppTitle.scss
+++ b/src/components/AppTitle.scss
@@ -8,6 +8,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     border-radius: 0;
+    cursor: default;
 
     button {
         background-color: transparent;
