--- a/src/components/SearchBar.scss
+++ b/src/components/SearchBar.scss
@@ -5,6 +5,7 @@
     cursor: default;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 5px 15px;
 
     &:hover {
@@ -19,6 +20,7 @@
         outline: none;
         color: $text-color;
         font-size: 16px;
+        width: 100%;
     }
 }
 
