--- a/src/components/CountryCard.scss
+++ b/src/components/CountryCard.scss
@@ -3,17 +3,23 @@
 .country-card {
     
     @include element();
-    max-width: 100%;
+    width: 100%;
     transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
 
     &:hover {
         filter: brightness(1.1);
         transform: scale(1.03);
     }
+
+    .img-container {
+        width: 100%;
+        height: 170px;
+    }
     
     img {
         width: 100%;
-        height: 80%;
+        height: 100%;
+        object-fit: cover;
         overflow: hidden;
         border-radius: 5px 5px 0 0;
     }
