--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -39,6 +39,10 @@ body {
     color: $text-color;
 }
 
+a {
+    text-decoration: none;
+}
+
 button {
     @include element();
     padding: 5px 22px;
