--- a/src/components/CountryCardContainer.scss
+++ b/src/components/CountryCardContainer.scss
@@ -4,4 +4,9 @@
     display: grid;
     grid-template-columns: repeat( auto-fit , minmax( 250px , 1fr ) );
     justify-items: center;
+
+    a {
+        text-decoration: none;
+        width: 100%;
+    }
 }
