--- a/src/components/BorderCountries.scss
+++ b/src/components/BorderCountries.scss
@@ -2,9 +2,14 @@
     display: grid;
     gap: 20px;
     grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 10px;
 
     button {
-        max-width: 100%;
+        width: 100%;
         padding: 10px;
+    }
+
+    a {
+        width: 100%;
     }
 }
