--- a/src/components/CountryCard.scss
+++ b/src/components/CountryCard.scss
@@ -4,7 +4,8 @@
     
     @include element();
     width: 100%;
-    transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1), background-color 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+    box-shadow: 0px 2px 3px 5px $shadow-color;
 
     &:hover {
         filter: brightness(1.1);
