--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,13 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap");
 
-$element-background: hsl(209, 23%, 22%);
-$app-background: hsl(207, 26%, 17%);
-$text-color: hsl(0, 0%, 100%);
-$shadow-color: hsl(200, 15%, 8%);
+:root {
+    --element-background: hsl(209, 23%, 22%);
+    --app-background: hsl(207, 26%, 17%);
+    --text-color: hsl(0, 0%, 100%);
+    --shadow-color: hsla(240, 1%, 19%, 0.195);
+}
+
+$element-background: var(--element-background);
+$app-background: var(--app-background);
+$text-color: var(--text-color);
+$shadow-color: var(--shadow-color);
 
 @mixin element {
     background-color: $element-background;
-    box-shadow: 0px 0px 5px 5px rgba($shadow-color, 0.15);
+    box-shadow: 0px 2px 3px 5px $shadow-color;
     border-radius: 5px;
     border: none;
     color: $text-color;
@@ -17,20 +24,7 @@ $shadow-color: hsl(200, 15%, 8%);
 * {
     margin: 0; padding: 0;
     font-family: 'Nunito Sans', sans-serif;
-}
-
-.dark-theme {
-    $element-background: hsl(209, 23%, 22%);
-    $app-background: hsl(207, 26%, 17%);
-    $text-color: hsl(0, 0%, 100%);
-    $shadow-color: hsl(200, 15%, 8%);
-}
-
-.light-theme {
-    $element-background: hsl(0, 0%, 52%);
-    $app-background: hsl(0, 0%, 98%);
-    $text-color: hsl(200, 15%, 8%);
-    $shadow-color: hsl(200, 15%, 8%);
+    transition: background-color 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 body {
