--- a/src/components/CountryCardContainer.scss
+++ b/src/components/CountryCardContainer.scss
@@ -2,11 +2,37 @@
     margin: 20px;
     gap: 20px;
     display: grid;
-    grid-template-columns: repeat( auto-fit , minmax( 250px , 1fr ) );
+    grid-template-columns: 1fr;
     justify-items: center;
+    align-self: center;
+    align-items: center;
 
     a {
         text-decoration: none;
         width: 100%;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .country-card-container {
+        grid-template-columns: repeat(2, 1fr);
+        align-self: center;
+        align-items: center;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    .country-card-container {
+        grid-template-columns: repeat(3, 1fr);
+        align-self: center;
+        align-items: center;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .country-card-container {
+        grid-template-columns: repeat(4, 1fr);
+        align-self: center;
+        align-items: center;
     }
 }
